# prg2

./: .gitignore  CMakeLists.txt  Readme.md
2023-08-15/: CMakeLists.txt  main.c
Aula - analise de algoritos/: .gitignore  CMakeLists.txt  funcoes.c  funcoes.h  main  main.c
app_arvore/: CMakeLists.txt  main.c
app_arvore_binaria/: CMakeLists.txt  main.c
app_fila/: CMakeLists.txt  main.c
app_lista/: CMakeLists.txt  main.c
app_lista_encadeada/: CMakeLists.txt  main.c
app_ord_texto/: CMakeLists.txt  main.c
app_ordenacao_v2/: CMakeLists.txt  main.c  relogio_cpu.c  relogio_cpu.h  relogio_parede.c  relogio_parede.h  tomada_tempo.c  tomada_tempo.h
app_ordenadacao/: CMakeLists.txt
app_pilha/: CMakeLists.txt  main.c
app_textos/: CMakeLists.txt  gerar  main.c  regras.txt
appprg/: CMakeLists.txt  main.c
aula_8/: .fibo_rec.c.swp  CMakeLists.txt  fatorial.c  fatorial.h  fibo_rec.c  fibo_rec.h  fibonacci.c  fibonacci.h  main  main.c  recursividade.md
aula_vet_rand/: .main.c.swp  CMakeLists.txt  main.c
lista-01/: CMakeLists.txt  exercicio_1.c  exercicio_1.h  exercicio_2.c  exercicio_2.h  exercicio_3.c  exercicio_3.h  exercicio_4.c  exercicio_4.h  exercicio_5.c  exercicio_5.h  exercicio_6.c  exercicio_6.h  exercicio_7.c  exercicio_7.h  exercicio_8.c  exercicio_8.h  main.c
tabela_hash_ex/: CMakeLists.txt  main.c  primeiro  segundo
